# crownan

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: agent-setup.md  slackbot-setup.md
src/crownan/: __init__.py  benchmark.py  cli.py  client.py  exceptions.py  models.py
src/crownan/agent/: __init__.py  executor.py  session.py  setup.py  tools.py
src/crownan/slackbot/: __init__.py  __main__.py  app.py
tests/: conftest.py  test_cli.py  test_client.py  test_client_requests.py  test_models.py  test_slackbot.py  test_tool_executor.py
